--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
     <header>
         <div class="header-left-section">
+            <a class="website" href=""https://codewith-vivek.github.io/Jaguar/index.html>
             <img class="company-name-img" src="logo-jaguar-test.png">
+            </a>
             <a class="header-section1">Vehicles</a>
             <a class="header-section1">purchase</a>
             <a class="header-section1">owners</a>
